[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carcassonne"
version = "11.18"
authors = [{ name = "Martin Allen", email = "martin.tr.allen@gmail.com" }]
description = "Carcassonne board generator"
readme = "README.md"
requires-python = ">=3.12"

dependencies = ["numpy", "pygame"]

[project.scripts]
wfc = "cli:cli"
